fix: update index.html

--- a/index.html
+++ b/index.html
@@ -558,8 +558,9 @@ The content here is not a simulation. Every activity done at this site is up-to-
 
 <!-- Dedicated Upload Page -->
 <div id="uploadPage" class="page controls">
-    <h2 id="uploadPageTitle"><i class="fa-solid fa-upload fa-fw"></i> Upload Files to <span id="uploadRepoName"></span></h2>
+    <h2 id="uploadPageTitle">Upload Files to <span id="uploadRepoName"></span></h2>
     <input type="file" id="multiFileUploadInput" multiple onchange="displayFilesToUpload(this.files)" style="width: 100%;"><br>
+
     
     <div style="margin-top: 15px;">
         <label for="uploadCommitMessage">Commit Message:</label>
